--- a/ReadMe
+++ b/ReadMe
@@ -12,4 +12,4 @@ How to set up :
 How to  set up in your local machine : 
 	1.Download WAMP server ( in windows )
 	2.Copy the following files into to "C:/wamp/www/"
-	3.Open your broser and run the locally hosted webpage 
+	3.Open your browser and run the locally hosted webpage 
